1685: fix for navigation wrapper on mobile

--- a/themes/ddbasic/sass/components/header.scss
+++ b/themes/ddbasic/sass/components/header.scss
@@ -504,6 +504,10 @@
         box-shadow $speed $ease
       );
       top: $topbar-height;
+      // Tablet
+      @include media($tablet) {
+        top: $header-height;
+      }
     }
     // Search Form Extended with admin-menu
     .search-form-extended.admin-menu & {
@@ -518,6 +522,7 @@
     .search-form-extended.front & {
       top: $topbar-height + $search-form-extended-height;
     }
+
     // Search Form Extended on frontpage with admin-menu
     .search-form-extended.page-search.admin-menu &,
     .search-form-extended.front.admin-menu & {
@@ -617,7 +622,7 @@
           top: $header-height + $toolbar-height;
         }
 
-        .search-form-extended.page-search &
+        .search-form-extended.page-search &,
         .search-form-extended.front & {
           top: $header-height + $search-form-extended-height;
         }
@@ -678,6 +683,11 @@
 
         .mobile-menu-is-open & {
           padding-bottom: $header-height - $topbar-height;
+        }
+
+        .search-form-extended.page-search &,
+        .search-form-extended.front & {
+          top: $header-height - $topbar-height;
         }
       }
     }
